final-project/k8s-manifest-repo/base/flask-login-rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-bluegreen
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollout-bluegreen
  template:
    metadata:
      labels:
        app: rollout-bluegreen
    spec:
      containers:
      - name: rollout-bluegreen
        image: 709861978753.dkr.ecr.ap-northeast-2.amazonaws.com/kosa_backend_login:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
  strategy:
    blueGreen:
      activeService: rollout-bluegreen-active
      previewService: rollout-bluegreen-preview
      autoPromotionEnabled: false
