final-project/k8s-manifest-repo/base/flask-login-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-active
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: rollout-bluegreen
  type: NodePort
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 5002
    nodePort: 30091
---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: rollout-bluegreen
  type: NodePort
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 5002
    nodePort: 30092
