final-project/k8s-manifest-repo/base/frontend-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-active
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: rollout-bluegreen
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30081
---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: rollout-bluegreen
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30082
